--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,9 @@
 <resources>
 
     <string name="app_name">WeeDroid</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="button">Init</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
 
 </resources>
